# testtask

./: Dockerfile  MANIFEST.in  README.md  README.txt  docker-compose.yml  entrypoint.sh  init.sql  pyproject.toml  pytest.ini  setup.cfg  setup.py  uwsgi.ini
requirements/alpine/: requirements.txt
wallet_api/: asgi.py  settings.py  urls.py  wsgi.py
wallet_api/apicore/: apps.py  models.py  serializers.py  views.py
wallet_api/apicore/migrations/: 0001_initial.py  0002_trigger.py
wallet_api/apicore/tests/: conftest.py  test_contraints.py  test_smoke.py  test_trx_api.py  test_wallet_api.py
